# WizardChess

./: QueenPiece.cc  font_chess_35.c
components/lvgl__lvgl/: lv_conf_template.h
main/: CMakeLists.txt  Spec_size_font_60.c  Spec_size_font_60.h  chess_ui.c  chess_ui.h  color_pick.c  color_pick.h  font_chess_35_lvgl_8.c  font_chess_35_lvgl_8.h  i2c_main.c  i2c_main.h  main.c  user_gameplay.c  user_gameplay.h
